auto-test/tests/chapter_18/invalid_types/extra_credit/union_tag_resolution/union_type_shadows_struct.c



struct u {
    int a;
};

int main(void) {
    
    union u;
    union u my_union; 
    return 0;
}